2009-09-23  Daiki Ueno  <ueno@unixuser.org>

	* epg.el (epg-wait-for-status): Preserve existing 'error results.

2009-09-22  Sam Steingold  <sds@gnu.org>

	* vc-hg.el (vc-hg-print-log): Fix shortlog arg passing.
	(vc-hg-outgoing, vc-hg-incoming): Bump okstatus in `vc-hg-command'
	to 1 because hg returns status 1 when nothing is found.
	Bind `vc-short-log' for the sake of `vc-hg-log-view-mode'.

2009-09-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/fill.el: Convert to utf-8 encoding.
	(fill-french-nobreak-p): Remove redundant » and « inherited from our
	pre-unicode days.

	* add-log.el (change-log-fill-forward-paragraph): New function.
	(change-log-mode): Use it so fill-region DTRT.
	Set fill-indent-according-to-mode here rather than in
	change-log-fill-paragraph.
	(change-log-fill-paragraph): Remove.

2009-09-22  Juanma Barranquero  <lekktu@gmail.com>

	* info.el (Info-try-follow-nearest-node): Use the URL extracted by
	`Info-get-token', instead of `browse-url-url-at-point'.  (Bug#4508)

2009-09-22  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-mode-map): Make mouse-1 and 3 clicks on
	the scroll-bar scroll the calendar window rather than the buffer.

	* calendar/cal-menu.el (cal-menu-scroll-menu): Add a sub-section with
	commands that move point (as opposed to scrolling).

	* emulation/tpu-edt.el (tpu-copy-keyfile): Fix condition-case handler.

	* emacs-lisp/elint.el (elint): New custom group.
	(elint-log-buffer): Make it a defcustom.
	(elint-scan-preloaded, elint-ignored-warnings)
	(elint-directory-skip-re): New options.
	(elint-builtin-variables): Doc fix.
	(elint-preloaded-env): New variable.
	(elint-unknown-builtin-args): Add an entry for encode-time.
	(elint-extra-errors): Make it a variable rather than a constant.
	(elint-preloaded-skip-re): New constant.
	(elint-directory): Skip files matching elint-directory-skip-re.
	(elint-features): New variable, local to linted buffers.